--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "keywords": [],
-  "main": "dist/hellotype-shared.umd.js",
-  "module": "dist/hellotype-shared.es.js",
-  "types": "dist/types/hellotype-shared.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "edicleoline <edicleo@proton.me>",
   "repository": {
     "type": "git",
@@ -15,11 +14,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p src/tsconfig.json",
-    "build:amd": "tsc -p src/tsconfig-amd.json",
-    "build:es": "tsc -p src/tsconfig-es.json",
-    "build:es6": "tsc -p src/tsconfig-es6.json",
-    "build:lib": "tsc -p src/tsconfig.json",
-    "clean": "rm -r amd es lib",
+    "clean": "rm -r dist",
     "postupdate": "git diff-files --quiet package-lock.json || npm test",
     "pretest": "tslint --project .",
     "publish-please": "publish-please",
@@ -41,13 +36,17 @@
     "ts-node": "^10.9.1",
     "tslint": "6.1.3",
     "tsx": "^4.19.1",
-    "typescript": "4.4.4",
+    "typescript": "^5.6.2",
     "updates": "15.0.2"
   },
   "dependencies": {
+    "@types/node": "^22.7.4",
     "axios": "^1.7.7",
     "camelcase-keys": "^9.1.3",
+    "expo-haptics": "^13.0.1",
+    "expo-sqlite": "^14.0.6",
     "inversify": "^6.0.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "reflect-metadata": "^0.2.2"
   },
   "sideEffects": false
